--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,5 @@
 name: Build
-
-on:
-  push:
-    branches:
-      - '*'
-    tags:
-      - '*'
-  pull_request:
-    branches:
-      - '*'
+on: workflow_dispatch
 
 concurrency:
   group: build-${{ github.ref }}
